--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,8 @@ def plugins = [
         'packages-plugin',
         'custom-logo-plugin',
         'screen-diff-plugin',
-        'junit-plugin'
+        'junit-plugin',
+        'ios-plugin'
 ]
 
 plugins.forEach({
